[General] iOS 13 support

--- a/batsie WatchKit Extension/Info.plist
+++ b/batsie WatchKit Extension/Info.plist
@@ -32,5 +32,7 @@
 	</dict>
 	<key>WKExtensionDelegateClassName</key>
 	<string>ExtensionDelegate</string>
+	<key>WKRunsIndependentlyOfCompanionApp</key>
+	<true/>
 </dict>
 </plist>
